--- a/ShippingINC/ShippingINC.csproj
+++ b/ShippingINC/ShippingINC.csproj
@@ -5,4 +5,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Boat\" />
+    <Folder Include="Shipping\Harbor\" />
+    <Folder Include="Shipping\Port\" />
+    <Folder Include="Shipping\Wharf\" />
+  </ItemGroup>
+
 </Project>
