--- a/ShippingINC/ShippingINC.csproj
+++ b/ShippingINC/ShippingINC.csproj
@@ -6,10 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Boat\" />
-    <Folder Include="Shipping\Harbor\" />
-    <Folder Include="Shipping\Port\" />
-    <Folder Include="Shipping\Wharf\" />
+    <Compile Remove="Boat\**" />
+    <Compile Remove="Shipping\**" />
+    <EmbeddedResource Remove="Boat\**" />
+    <EmbeddedResource Remove="Shipping\**" />
+    <None Remove="Boat\**" />
+    <None Remove="Shipping\**" />
   </ItemGroup>
 
 </Project>
